# ephemeron

./: .dockerignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yaml  images.yaml
k8s/: ephemerons.yaml  example.yaml
k8s/api/: Dockerfile  config.yaml  config.yml  deployment.yaml  sa.yaml
k8s/controller/: Dockerfile  deployment.yaml  sa.yaml
src/: lib.rs
src/api/: config.rs  handlers.rs  mod.rs
src/api/auth/: filter.rs  mod.rs
src/controller/: conditions.rs  endpoints.rs  expiry.rs  ingress.rs  mod.rs  pod.rs  service.rs
src/resource/: mod.rs  schemas.rs
tests/: test-example.sh
