[package]
name = "ephemeron"
version = "0.1.0"
authors = ["kazk <kazk.dev@gmail.com>"]
edition = "2018"
default-run = "run"

[dependencies]
kube = { version = "0.59.0", features = ["derive"] }
kube-runtime = "0.59.0"
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_20", "schemars"] }
schemars = { version = "0.8.3", features = ["chrono"] }

serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"

snafu = "0.6.10"
futures = "0.3.15"
chrono = "0.4.19"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
tokio = { version = "1.6.1", features = ["macros", "rt", "rt-multi-thread"] }

warp = "0.3.1"
xid = "1.0.0"
jsonwebtoken = "7"
once_cell = "1"
