[package]
name = "ephemeron"
version = "0.1.0"
authors = ["kazk <kazk.dev@gmail.com>"]
edition = "2021"
rust-version = "1.56"
default-run = "run"

[dependencies]
kube = { version = "0.59.0", features = ["derive"] }
kube-runtime = "0.59.0"
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_20", "schemars"] }
schemars = { version = "0.8.3", features = ["chrono"] }

serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
serde_yaml = "0.8.19"

snafu = "0.6.10"
futures = "0.3.16"
chrono = "0.4.19"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
tokio = { version = "1.10.1", features = ["macros", "rt", "rt-multi-thread"] }

warp = "0.3.1"
xid = "1.0.0"
jsonwebtoken = "7.2.0"
once_cell = "1.8.0"
