[package]
name = "ephemeron"
version = "0.1.0"
authors = ["kazk <kazk.dev@gmail.com>"]
edition = "2021"
rust-version = "1.56"
default-run = "run"

[dependencies]
kube = { version = "0.70.0", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_20", "schemars"] }
schemars = { version = "0.8.8", features = ["chrono"] }

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"

futures = "0.3.21"
chrono = { version = "0.4.19", default-features = false, features = ["std", "clock"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"] }

warp = { version = "0.3.2", default-features = false }
xid = "1.0.0"
jsonwebtoken = "8.0.1"
once_cell = "1.10.0"
thiserror = "1.0.30"
